--- a/style.css
+++ b/style.css
@@ -18,3 +18,26 @@ footer {
   border-style: solid;
   margin-top: 15px;
 }
+
+@media screen (max-width: 1000px) {
+  .article {
+    border-style: solid;
+  }
+
+  .h1 {
+    text-align: center;
+    border-style: solid;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+  }
+
+  footer {
+    text-align: center;
+    border-style: solid;
+    margin-top: 15px;
+  }
+}
